--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             border: none;
             cursor: pointer;
             padding: 0.5rem;
+            z-index: 1001;
         }
 
         .mobile-menu-btn span {
@@ -91,6 +92,57 @@
             background: #1a1a1a;
             margin: 5px 0;
             transition: 0.3s;
+        }
+
+        .mobile-menu-btn.active span:nth-child(1) {
+            transform: rotate(45deg) translate(5px, 5px);
+        }
+
+        .mobile-menu-btn.active span:nth-child(2) {
+            opacity: 0;
+        }
+
+        .mobile-menu-btn.active span:nth-child(3) {
+            transform: rotate(-45deg) translate(5px, -5px);
+        }
+
+        /* 모바일 네비게이션 */
+        .mobile-nav {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100vh;
+            background: rgba(255, 255, 255, 0.98);
+            z-index: 1000;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 2rem;
+        }
+
+        .mobile-nav.active {
+            display: flex;
+        }
+
+        .mobile-nav a {
+            font-size: 1.5rem;
+            color: #1a1a1a;
+            text-decoration: none;
+            font-weight: 500;
+            transition: color 0.3s;
+        }
+
+        .mobile-nav a:hover {
+            color: #B4956F;
+        }
+
+        .mobile-nav .nav-cta {
+            background: #4169E1;
+            color: #fff;
+            padding: 0.8rem 2rem;
+            border-radius: 30px;
         }
 
         /* Hero Slider */
@@ -611,6 +663,13 @@
         </div>
     </header>
 
+    <!-- 모바일 네비게이션 -->
+    <nav class="mobile-nav" id="mobileNav">
+        <a href="columns.html">COLUMNS</a>
+        <a href="portfolio.html">PORTFOLIO</a>
+        <a href="quote.html" class="nav-cta">ASK A QUOTE</a>
+    </nav>
+
     <main>
         <!-- Hero Slider -->
         <section class="hero-slider">
@@ -956,4 +1015,19 @@
             });
         });
 
-        // Start aut
+        // 모바일 메뉴 토글
+        const mobileMenuBtn = document.getElementById('mobileMenuBtn');
+        const mobileNav = document.getElementById('mobileNav');
+
+        mobileMenuBtn.addEventListener('click', () => {
+            mobileMenuBtn.classList.toggle('active');
+            mobileNav.classList.toggle('active');
+            document.body.style.overflow = mobileNav.classList.contains('active') ? 'hidden' : '';
+        });
+
+        // Start autoplay
+        startAutoplay();
+    </script>
+</body>
+
+</html>
