Fix filter tabs: single line on mobile (no wrap)

--- a/portfolio.html
+++ b/portfolio.html
@@ -102,20 +102,21 @@
         .filter-tabs {
             display: flex;
             justify-content: center;
-            gap: 0.5rem;
-            margin-bottom: 2.5rem;
-            flex-wrap: wrap;
+            gap: 0.3rem;
+            margin-bottom: 2rem;
+            flex-wrap: nowrap;
         }
 
         .filter-tab {
-            padding: 0.6rem 1.5rem;
+            padding: 0.5rem 0.8rem;
             border: none;
             background: transparent;
             color: #666;
-            font-size: 0.9rem;
+            font-size: 0.85rem;
             cursor: pointer;
             transition: all 0.3s;
             border-radius: 4px;
+            white-space: nowrap;
         }
 
         .filter-tab:hover {
