--- a/columns.html
+++ b/columns.html
@@ -505,6 +505,7 @@
                 }
             } catch (e) {
                 console.warn('Notion API 연동 실패, 샘플 데이터 사용:', e.message);
+                // alert('칼럼 데이터를 불러오는 데 실패했습니다. 샘플 데이터를 표시합니다.');
             }
 
             // API 실패 시 샘플 데이터 표시
